[project]
name = "proc-houston-ta"
version = "0.1.0"
description = "Houston Materials Data Matching for semantic similarity analysis using NLP techniques."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "linktransformer==0.1.16",
    "evaluate",
    "regex",
    "streamlit"
]